Made use of new collections API methods